ingress-swaggerv2-different.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swaggerv2
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
    - hosts: [swaggerv2.openmbee.org]
      secretName: swaggerv2-tls
  rules:
    - host: swaggerv2.openmbee.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: swagger-ui
                port:
                  number: 80
